--- a/content/docs/Change-Log.mdx
+++ b/content/docs/Change-Log.mdx
@@ -5,7 +5,509 @@ All notable changes to Apexify.js will be documented in this file.
 The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
 and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).
 
-## [5.1.0] - 2024-12-20
+## [5.2.9] - 2025-12-28
+
+
+### 🐛 Fixed
+
+##### Image Filters & Distortion
+- **Fixed Perspective Distortion**: Completely rewrote perspective transform implementation
+  - Replaced incorrect affine transform (only used 3 points) with proper homography matrix (uses all 4 points)
+  - Added proper perspective transform using 3x3 homography matrix with bilinear interpolation
+  - Fixed bounding box calculation to ensure transformed image stays within canvas bounds
+  - Images now correctly transform to specified perspective points without going outside canvas dimensions
+  
+- **Fixed Pre-Filter Application**: Pre-filters now work correctly
+  - Pre-filters were being applied to empty canvas (before image was drawn)
+  - Now draws image to temporary canvas first, applies filters, then draws result to main canvas
+  - All filters now work correctly in both 'pre' and 'post' filter order modes
+
+- **Fixed Invert Filter**: Invert filter no longer causes image displacement or disappearance
+  - Fixed dimension preservation issue where Sharp processing could change image dimensions
+  - Added dimension verification and automatic resizing if dimensions don't match
+  - Ensured alpha channel preservation throughout filter pipeline
+  - Image now stays in correct position and maintains exact dimensions after inversion
+
+- **Fixed Filter Parameter Usage**: Corrected all filter parameter types
+  - **Use `intensity`**: gaussianBlur, sharpen, motionBlur, radialBlur, noise, grain, edgeDetection, emboss
+  - **Use `value`**: brightness (-100 to 100%), contrast (-100 to 100%), saturation (-100 to 100%), hueShift (0-360 degrees)
+  - **Special parameters**: posterize uses `levels` (2-256), pixelate uses `size` (2+), radialBlur uses `centerX/centerY`
+  - Added comprehensive validation and value clamping for all filter parameters
+
+### ✨ Enhanced
+
+##### Group Transform Operations - Full Feature Parity ⭐ MAJOR UPDATE!
+- **Extended Group Transform Options**: `GroupTransformOptions` now supports ALL properties available in normal `createImage`
+  - **Visual Properties**: `opacity`, `blur`, `borderRadius`, `borderPosition` - Apply to entire group
+  - **Image Filters**: `filters`, `filterIntensity`, `filterOrder` - Apply filters to entire group (pre/post)
+  - **Image Effects**: `effects` - Vignette, lens flare, chromatic aberration, film grain for entire group
+  - **Styling**: `shadow`, `stroke`, `boxBackground` - Group-level shadows, strokes, and backgrounds
+  - **Masking**: `mask`, `clipPath` - Apply masks and clip paths to entire group
+  - **Distortion**: `distortion`, `meshWarp` - Apply distortions to entire group
+  - Full feature parity with individual element properties
+  - Group-level properties are applied to the entire group as a single unit
+  - Individual element properties still work (except `rotation` which is handled by group transform)
+  - Matches Photoshop-style group functionality where groups can have their own effects and styling
+
+- **Enhanced Group Transform Implementation**: Complete rewrite of grouped drawing logic
+  - Calculates group bounding box automatically from all elements
+  - Applies group transformations (rotation, scale, translation) with proper pivot point
+  - Supports pre-filters: Draws all elements to temp canvas, applies filters, then composites
+  - Supports post-filters: Applies filters after all elements are drawn
+  - Applies group effects (vignette, lens flare, chromatic aberration, film grain) to transformed group
+  - Group shadow and stroke are applied with proper transform accounting
+  - Group opacity and blur affect entire group uniformly
+  - Group clip paths and border radius work correctly with transformations
+  - All group properties work seamlessly together
+
+##### Professional Image Filters
+- **Upgraded to Professional Filters**: Switched from simple to professional filter implementation
+  - All filters now use Sharp library for high-quality processing
+  - Motion blur and radial blur use proper convolution kernels
+  - Edge detection uses Sobel kernel algorithm
+  - Emboss uses proper emboss kernel
+  - Noise and grain use Jimp for pixel-level manipulation
+  - Better quality and more accurate filter effects
+
+- **Improved Filter Documentation**: Added comprehensive JSDoc comments
+  - Documented all filter types and their required/optional parameters
+  - Added parameter ranges and usage examples
+  - Clear distinction between `intensity` and `value` parameters
+  - Better TypeScript type definitions with detailed descriptions
+
+- **Enhanced Filter Validation**: Added robust parameter validation
+  - Value clamping for noise/grain (0-1 range)
+  - Angle normalization for motion blur (0-360 degrees)
+  - Dimension preservation throughout filter pipeline
+  - Better error handling and fallback mechanisms
+
+### 🔧 Improved
+
+##### Group Transform Architecture
+- **Better Transform Order**: Proper application order for group properties
+  - Group opacity and blur applied first
+  - Group box background and shadow applied before transformations
+  - Group clip path/border radius applied before element drawing
+  - Transformations applied (rotation, scale, translation)
+  - Elements drawn with individual properties (except rotation)
+  - Post-filters and effects applied to transformed group
+  - Group stroke applied after all drawing with transform accounting
+- **Improved Bounding Box Calculation**: Automatic calculation from all group elements
+  - Handles elements with different sizes and positions
+  - Accounts for transformed coordinates when applying effects
+  - Proper coordinate space handling for pre/post filters
+
+
+## [5.2.5] - 2025-12-27
+
+### ✨ Added
+
+##### Advanced Text Metrics API ⭐ NEW!
+- **Comprehensive Text Measurement** (`measureText`): Complete text metrics matching Canvas API + extensions
+  - Standard Canvas API metrics: `width`, `actualBoundingBoxAscent/Descent`, `actualBoundingBoxLeft/Right`, `fontBoundingBoxAscent/Descent`
+  - Advanced Canvas API metrics: `alphabeticBaseline`, `emHeightAscent/Descent`, `hangingBaseline`, `ideographicBaseline` (when available)
+  - Enhanced Apexify.js metrics: `height`, `lineHeight`, `baseline`, `top`, `bottom`, `centerX`, `centerY`
+  - Multi-line support: `lines`, `totalHeight`, `lineCount` when `maxWidth` is provided
+  - Character-level metrics: `charWidths`, `charPositions` when `includeCharMetrics` is true
+  - Full font support: custom fonts, bold, italic, letter spacing, word spacing
+  - Perfect for dynamic layouts, text centering, and precise text positioning
+
+##### Advanced Pixel Data API ⭐ NEW!
+- **Pixel Manipulation** (`getPixelData`, `setPixelData`): Complete pixel-level control
+  - Get pixel data from any region: `getPixelData(canvasBuffer, { x, y, width, height })`
+  - Set pixel data back to canvas: `setPixelData(canvasBuffer, pixelData, { x, y })`
+  - Access RGBA values directly: `pixelData.data` (Uint8ClampedArray)
+  - Full Canvas ImageData compatibility
+
+- **Pixel Manipulation Filters** (`manipulatePixels`): Advanced pixel processing
+  - Custom processor functions: `processor: (r, g, b, a, x, y) => [r, g, b, a]`
+  - Built-in filters: `grayscale`, `invert`, `sepia`, `brightness`, `contrast`, `saturate`
+  - Intensity control for all filters (0-1)
+  - Region-specific manipulation: Apply filters to specific areas
+  - Perfect for custom effects, color adjustments, and advanced image processing
+
+- **Pixel Color Utilities** (`getPixelColor`, `setPixelColor`): Quick pixel access
+  - Get pixel color at coordinates: `getPixelColor(canvasBuffer, x, y)`
+  - Set pixel color at coordinates: `setPixelColor(canvasBuffer, x, y, { r, g, b, a })`
+  - Convenient helpers for pixel-level operations
+
+##### Advanced Path2D API ⭐ NEW!
+- **Path Creation** (`createPath2D`): Create complex paths from commands
+  - Full Canvas Path2D compatibility
+  - Comprehensive command set: `moveTo`, `lineTo`, `arc`, `arcTo`, `bezierCurveTo`, `quadraticCurveTo`, `rect`, `ellipse`, `closePath`
+  - Advanced shape commands: `circle`, `roundedRect` (with per-corner radius), `polygon`, `star`, `arrow`
+  - Build complex paths programmatically with type-safe command arrays
+  - Perfect for complex shapes, custom graphics, and advanced path manipulation
+
+- **Path Drawing** (`drawPath`): Draw paths with advanced styling options
+  - Stroke options: color, width, lineCap, lineJoin, miterLimit, dashArray, dashOffset, opacity
+  - Fill options: color, opacity, fill rule (nonzero/evenodd)
+  - Transform support: translate, rotate, scale with custom origin point
+  - Full integration with Apexify.js styling system
+  - Works with both Path2D objects and command arrays
+
+##### Advanced Hit Detection API ⭐ NEW!
+- **Point-in-Path Detection** (`isPointInPath`): Check if point is inside a Path2D object
+  - Detect hits in fill area and stroke edges
+  - Configurable stroke width for stroke detection
+  - Tolerance control for edge cases
+  - Returns detailed hit information: `hit`, `hitType` ('fill'/'stroke'/'outside'), `distance`
+
+- **Custom Region Detection** (`isPointInRegion`, `isPointInAnyRegion`): Advanced region-based hit detection
+  - Multiple region types: `rect`, `circle`, `ellipse`, `polygon`, `path`, `custom`
+  - Rectangle regions with precise boundary detection
+  - Circle and ellipse regions (with rotation support)
+  - Polygon regions with any number of points
+  - Path2D-based regions for complex shapes
+  - Custom function regions: `check: (x, y) => boolean` for any custom logic
+  - Multi-region detection: Test point against multiple regions at once
+  - Distance calculation: `getDistanceToRegion()` for spatial queries
+  - Perfect for interactive graphics, collision detection, and UI elements
+
+##### New Shape Types
+- **Arc and PieSlice Shapes**: Added `'arc'` and `'pieSlice'` as new `ShapeType` options
+  - Support for drawing arcs and pie slice sectors
+  - Configurable start and end angles (in radians)
+  - Support for donut slices with `innerRadius`
+  - Custom pivot points with `centerX` and `centerY`
+  - Full feature support: gradients, shadows, strokes, filters
+  - Perfect for roulette wheels, pie charts, and circular segments
+
+##### Enhanced GIF Creation with Callbacks
+- **Programmatic Frame Generation** (`onStart` callback): Generate GIF frames using Apexify.js APIs
+  - Callback receives frame count and painter instance
+  - Generate frames entirely using Apexify.js (`createCanvas`, `createImage`, `createText`, etc.)
+  - No file I/O needed - all frames generated in memory
+  - Configurable frame count via `frameCount` or `duration` options
+  - Perfect for animations, roulette wheels, spinners, and dynamic content
+
+- **Static Final Frame Generation** (`onEnd` callback): Automatically generate static image from final frame
+  - Receives final frame buffer and painter instance
+  - Can process/add effects to final frame
+  - Returns both GIF and static image when `onEnd` is provided
+  - Perfect for showing "winner" frames or final states
+
+##### Group Transform Operations
+- **Grouped Drawing** (`isGrouped` option): Transform multiple elements together as a group
+  - Apply rotations, scales, and translations to all elements simultaneously
+  - Shared pivot point for rotation and scaling
+  - All elements rotate around a common center point (not individual centers)
+  - Perfect for roulette wheels, clocks, spinners, and grouped UI elements
+  - Used with `createImage()` when passing array of elements
+
+### 🔧 Improved
+
+##### Text Metrics Enhancements
+- **Customizable Measurement Canvas**: Made measurement canvas size configurable
+  - Optional `measurementCanvas` option in `measureText()` for memory optimization
+  - Smart auto-calculation based on text length, font size, and wrapping
+  - Bounds protection: 1000-10000px width, 500-5000px height
+  - Better memory efficiency for large text measurements
+
+##### Image Creation Enhancements
+- **Enhanced Shape Property Support**: Properly pass all shape properties through the rendering pipeline
+  - Fixed passing of `points` array for custom polygons
+  - Fixed passing of `startAngle`, `endAngle` for arcs/pieSlices
+  - Fixed passing of `centerX`, `centerY` for custom pivot points
+  - All shape properties now correctly propagated to drawing functions
+
+##### Group Transform Implementation
+- **Correct Transform Order**: Fixed transformation order in grouped mode
+  - Proper order: translate to pivot → rotate → scale → translate → translate back
+  - Prevents double rotation and transform conflicts
+  - Ensures all elements transform correctly as a single unit
+
+##### GIF Creation Workflow
+- **Simplified Animation Creation**: Generate animated GIFs entirely using Apexify.js APIs
+  - No need to save frames to files first
+  - Generate frames programmatically in memory
+  - Cleaner API without direct canvas manipulation
+  - Better developer experience for animations
+
+### 🐛 Fixed
+
+##### Shape Drawing Fixes
+- **Fixed Polygon Default Behavior**: Fixed issue where polygons without `points` were defaulting to hexagon
+  - Custom `points` array now properly recognized and used
+  - Polygon drawing correctly uses provided points or falls back to regular polygon
+  - Fixed white hexagon appearing incorrectly
+
+- **Fixed Shape Property Passing**: Fixed shape properties not being passed to drawing functions
+  - `points`, `startAngle`, `endAngle`, `centerX`, `centerY` now properly passed through
+  - Type definitions updated to include all shape properties
+  - Shape rendering now works correctly for all shape types
+
+##### Group Transform Fixes
+- **Fixed Double Rotation Bug**: Fixed issue where elements in grouped mode were being rotated twice
+  - Elements in grouped mode now have `rotation: 0` to prevent individual rotation
+  - Group transform handles all transformations correctly
+  - Elements now rotate together as intended
+
+- **Fixed Transform Context**: Fixed canvas context state management in grouped transforms
+  - Proper `ctx.save()` and `ctx.restore()` usage
+  - Transform state correctly isolated per group operation
+  - No interference between grouped and individual transforms
+
+##### GIF Callback Fixes
+- **Fixed Return Type**: Fixed TypeScript return type for GIF creation with `onEnd` callback
+  - Returns `{ gif: Buffer | string, static: Buffer }` when `onEnd` is provided
+  - Returns just GIF buffer when `onEnd` is not provided
+  - Proper type handling for file output format
+
+- **Fixed Frame Count Calculation**: Improved frame count estimation when using `onStart` callback
+  - Better default frame count (30 frames)
+  - Proper calculation from `duration` and `delay` options
+  - More accurate animation timing
+
+##### Code Quality Improvements
+- **Comment Cleanup**: Removed descriptive inline comments throughout codebase
+  - Cleaned up redundant code comments that don't add value
+  - Improved code readability and maintainability
+  - Preserved important comments (eslint, TODO, FIXME, JSDoc)
+  - Total cleanup: ~58,000 characters removed across 42 files
+  - All code functionality preserved, cleaner codebase
+
+## [5.2.0] - 2025-12-25
+
+### ✨ Added
+
+##### Chart System Enhancements (Complete Rewrite & Major Upgrades!)
+
+- **Gradient Support for All Charts**: Professional gradient fills throughout
+  - **Background Gradients**: Apply linear, radial, or conic gradients to chart backgrounds
+  - **Bar/Line Gradients**: Individual bars and lines can use gradient fills
+  - **Title Gradients**: Chart titles support gradient text colors
+  - **Label Gradients**: Bar labels, value labels, and point labels support gradients
+  - **Legend Gradients**: Legend boxes and legend text support gradient fills
+  - Full gradient control with custom color stops and positioning
+
+- **Enhanced Text Styling for All Charts**: Professional typography
+  - **Custom Fonts**: Support for custom font files (`.ttf`, `.otf`, `.woff`)
+  - **Text Effects**: Shadows, strokes, glows for all text elements
+  - **Text Decorations**: Bold, italic, underline, strikethrough support
+  - **Advanced Styling**: Custom font families, sizes, and spacing
+  - Applied to titles, labels, legends, and all chart text elements
+
+- **Enhanced Pie Charts**:
+  - Gradient slice fills
+  - Enhanced title and label styling
+  - Gradient legend backgrounds and text
+  - Connected legend with gradient support
+  - Small slice label positioning improvements
+
+- **Enhanced Bar Charts**:
+  - Gradient bar fills (standard, grouped, stacked charts)
+  - Enhanced title, bar label, and value label styling
+  - Gradient legend backgrounds and text
+  - Support for gradient bars in all chart types (standard, grouped, stacked, waterfall, lollipop)
+
+- **Enhanced Horizontal Bar Charts**:
+  - Gradient bar fills (standard, grouped, stacked charts)
+  - Enhanced title, bar label, and value label styling
+  - Gradient legend backgrounds and text
+  - Support for gradient bars in all chart types
+
+- **Enhanced Line Charts**:
+  - Gradient line fills
+  - Enhanced title and point label styling
+  - Gradient legend backgrounds and text
+  - Support for gradient lines in all series
+
+- **Comparison Charts** (`createComparisonChart`): Compare any two chart types side by side
+  - Compare any combination: pie/bar, line/bar, pie/line, line/line, bar/bar, pie/pie, pie/donut, horizontal/bar, horizontal/horizontal, horizontal/line, horizontal/pie
+  - Side-by-side or top-bottom layouts
+  - Shared background with gradient/image support
+  - General top title with gradient and enhanced text styling
+  - Individual chart titles, data, configs, and legends
+  - Full feature support: gradients for all elements, custom fonts, enhanced text styling
+  - Each chart maintains its own legend with full customization
+  - Configurable spacing between charts
+
+- **Comprehensive Test Suite**:
+  - Enhanced test files for all chart types
+  - Tests for gradients, custom fonts, and advanced styling
+  - 11+ tests per chart type covering all new features
+  - Comparison chart tests with full feature demonstrations
+  - Organized test structure with dedicated output folders
+
+### 🔧 Improved
+
+##### Major Architectural Restructuring (Complete Refactor!)
+- **Modular Architecture Implementation**: Complete restructure of `ApexPainter` into specialized Creator classes
+  - Created `extended/` folder with dedicated Creator classes:
+    - `CanvasCreator.ts` - Handles all canvas creation logic
+    - `ImageCreator.ts` - Handles all image and shape drawing logic
+    - `TextCreator.ts` - Handles all text rendering logic
+    - `GIFCreator.ts` - Handles all GIF creation logic
+    - `ChartCreator.ts` - Handles all chart generation logic
+    - `VideoCreator.ts` - Handles all video processing operations
+  - **ApexPainter as Facade Pattern**: Refactored `ApexPainter` to act as a facade/delegator
+    - All `create*` methods now delegate to corresponding Creator classes
+    - Clean separation of concerns between orchestration and implementation
+    - Better maintainability and testability
+    - Reduced `ApexPainter.ts` from monolithic to clean orchestrator
+
+- **Video Helpers Modularization**: Moved all video processing helper methods to dedicated `VideoHelpers` class
+  - Extracted 33+ video helper methods from `ApexPainter.ts` to `utils/Video/videoHelpers.ts`
+  - Moved `executeFFmpegWithProgress` method to `VideoHelpers` where it belongs
+  - Improved code organization and maintainability
+  - Reduced `ApexPainter.ts` size by ~2300+ lines
+
+- **Error Handling Standardization**: Created centralized error utility functions
+  - Added `getErrorMessage()` utility function to standardize error message extraction
+  - Added `getCanvasContext()` utility function for consistent canvas context handling
+  - Replaced 36+ duplicate error handling patterns across all files
+  - Replaced 23+ duplicate context error patterns
+  - Consistent error handling throughout the codebase
+
+- **Code Duplication Removal**: Removed redundant code and methods
+  - Removed duplicate `CanvasResults` interface (now imported from `CanvasCreator`)
+  - Removed redundant validation methods from `ApexPainter.ts`:
+    - `#validateImageProperties`, `#validateTextProperties`, `#validateCanvasConfig`, `#validateGIFOptions`
+    - `#validateImageArray`, `#validateTextArray`, `#renderEnhancedText`
+  - Removed redundant shape drawing methods (~500+ lines):
+    - `#drawImageBitmap`, `#drawShape`, `#isComplexShape`
+    - `#applyShapeShadow`, `#applyShapeStroke`, `#applyShapeStrokeStyle`
+    - `#applyComplexShapeStroke`, `#darkenColor`, `#lightenColor`
+  - All functionality properly delegated to Creator classes
+
+- **Improved Code Organization**:
+  - **Modular File Structure**: Organized code into logical modules:
+    - `extended/` - Specialized Creator classes for each feature type
+    - `utils/` - Shared utilities organized by category (Video, Image, Text, Charts, etc.)
+    - Clear separation between core functionality and utilities
+  - Better separation of concerns between `ApexPainter` and specialized Creator classes
+  - Cleaner `ApexPainter.ts` acting as a facade/delegator (reduced from ~6000+ lines to ~4300 lines)
+  - Video-specific functionality properly isolated in `VideoHelpers`
+  - Consistent import patterns and type definitions
+  - **Dependency Injection**: Creator classes use dependency injection for shared functionality
+  - **Type Safety**: Improved TypeScript types with proper interface exports from Creator classes
+
+##### Chart Architecture
+- **Code Organization**: Charts moved to dedicated `lib/Canvas/utils/Charts/` directory
+- **Unified API**: All charts accessible through single `ApexPainter.createChart()` method
+- **Type Safety**: Enhanced TypeScript types for all chart options
+- **Modularity**: Better code organization with shared utilities
+
+##### Chart Rendering
+- **Gradient Integration**: Full integration of ApexPainter's gradient system into all charts
+- **Text Rendering**: Enhanced text renderer used throughout all chart types
+- **Legend Styling**: Consistent legend styling across all chart types
+- **Background Support**: Unified background gradient/image/color support
+
+##### Chart Features
+- **Flexible Legend Positioning**: All charts support top, bottom, left, right legend positions
+- **Enhanced Label Styling**: All labels (titles, bar labels, value labels, point labels) support gradients and enhanced styling
+- **Consistent API**: Same styling options available across all chart types
+
+### 🐛 Fixed
+
+##### Chart Fixes
+- Fixed legend positioning issues when legend is at top with title
+- Fixed Y-axis label overlap with left-positioned legends in bar and horizontal bar charts
+- Fixed horizontal bar chart bars not showing when legend is at top
+- Improved legend spacing calculations to account for axis labels
+- Fixed async/await handling in legend rendering functions
+
+##### Code Quality Fixes
+- Fixed TypeScript compilation errors from duplicate interfaces
+- Resolved import path issues for `CanvasResults` interface
+- Fixed error handling inconsistencies across Creator classes
+- Improved type safety by removing redundant type definitions
+
+##### Professional Video Editing Features (10 Major Features!)
+
+- **Freeze Frame** (`freezeFrame`): Hold a frame for dramatic effect
+  - Freeze video at any specific time
+  - Configurable freeze duration
+  - Perfect for highlighting moments or creating photo-like effects
+  - Seamlessly merges with video before and after
+
+- **Export Presets** (`exportPreset`): Quick export with platform-optimized settings
+  - 10 pre-configured presets: YouTube, Instagram, TikTok, Twitter, Facebook, 4K, 1080p, 720p, Mobile, Web
+  - Automatic resolution, FPS, and bitrate optimization per platform
+  - One-command export for social media platforms
+  - Web-optimized formats (WebM for web preset)
+
+- **Progress Callbacks** (`onProgress`): Real-time progress tracking
+  - Track processing progress for all video operations
+  - Provides percent complete, elapsed time, and processing speed
+  - Perfect for progress bars and user feedback
+  - Works with all video operations (compress, convert, transitions, etc.)
+
+- **Audio Normalization** (`normalizeAudio`): Professional audio leveling
+  - Three normalization methods: LUFS (broadcast standard), Peak, RMS
+  - Configurable target levels
+  - Broadcast-compliant audio (-23 LUFS default)
+  - Consistent audio levels across videos
+
+- **LUT Support** (`applyLUT`): Cinematic color grading
+  - Apply Look-Up Tables (.cube files) for professional color grades
+  - Intensity control (0-1) for subtle or full application
+  - Film emulation and cinematic looks
+  - Consistent color grading across videos
+
+- **Video Transitions** (`addTransition`): Professional transitions between videos
+  - 9 transition types: fade, wipe, slide, zoom, rotate, dissolve, blur, circle, pixelize
+  - Direction support for wipe, slide, and zoom transitions
+  - Single-video fade in/out support
+  - Configurable transition duration
+  - Automatic video resolution matching
+
+- **Animated Text** (`addAnimatedText`): Advanced text animations with custom fonts
+  - 8 animation types: fadeIn, fadeOut, slideIn, slideOut, zoom, bounce, rotate, typewriter
+  - Custom font support (reuses `createText` font system)
+  - Font file loading (`.ttf`, `.otf`, `.woff`)
+  - Font name and family support
+  - Time-based text visibility
+  - Position control (coordinates or preset positions)
+  - Background color and styling options
+
+- **Create Video from Frames** (`createFromFrames`): Compile frames into video
+  - Create videos from edited frames/images
+  - Supports Buffers and file paths
+  - Configurable FPS, format, quality, and resolution
+  - Automatic dimension detection from first frame
+  - Perfect for frame-by-frame editing workflows
+
+- **Replace Video Segments** (`replaceSegment`): Replace video segments
+  - Replace segments with video from another source
+  - Replace segments with edited frames
+  - Precise time range control
+  - Flexible replacement duration
+  - Seamless merging with original video
+
+- **Partial Audio Muting** (`mute.ranges`): Mute specific time ranges
+  - Mute audio for specific time segments (e.g., 7-13 seconds)
+  - Multiple mute ranges support
+  - Full mute still supported (backward compatible)
+  - Professional audio editing capabilities
+
+### 🔧 Improved
+
+##### Enhanced Video Processing
+- **Progress Tracking**: All video operations now support progress callbacks
+- **Better Error Messages**: More descriptive errors with context
+- **Resource Management**: Improved cleanup of temporary files
+- **Font System Integration**: Animated text uses same font system as `createText`
+- **Transition Quality**: Optimized transition rendering with proper video scaling
+
+##### Video Workflow Enhancements
+- **Frame-to-Video Pipeline**: Complete workflow from frame extraction → editing → compilation
+- **Segment Replacement**: Advanced video editing with frame or video replacement
+- **Audio Control**: Fine-grained audio control with partial muting
+- **Export Optimization**: Platform-specific optimizations for better quality and file sizes
+
+### 🐛 Fixed
+
+- Fixed type definitions for `replaceSegment` to support both video and frame replacement
+- Improved error handling in transition operations
+- Better path resolution for LUT files
+- Fixed font path handling in animated text (consistent with `createText`)
+
+---
+
+## [5.1.0] - 2025-12-22
 
 ### ✨ Added
 
@@ -170,7 +672,7 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 
 ---
 
-## [5.0.5] - 2024-12-20
+## [5.0.4] - 2025-12-22
 
 ### ✨ Enhanced
 
@@ -205,7 +707,7 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 
 ---
 
-## [5.0.0] - 2024-12-20
+## [5.0.0] - 2025-12-20
 
 ### 🎉 Major Feature Release - Advanced Image & Canvas Features
 
@@ -309,7 +811,7 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 
 ---
 
-## [4.9.28] - Previous Release
+## [4.9.28] - 2025-9-18
 
 ### Features
 - Enhanced text renderer with decorations
