--- a/content/docs/Image/image-distortion.mdx
+++ b/content/docs/Image/image-distortion.mdx
@@ -2,6 +2,10 @@
 
 Apexify.js provides powerful distortion effects to transform images in creative ways. Use perspective distortion, bulge/pinch effects, and mesh warping for artistic and practical image manipulation.
 
+<Alert type="success" title="Fixed in v5.2.9">
+Perspective distortion has been completely rewritten with proper homography matrix implementation. Images now correctly transform to specified perspective points without going outside canvas bounds. The transform uses all 4 control points correctly with bilinear interpolation for high-quality results.
+</Alert>
+
 ## Overview
 
 Distortion effects allow you to:
@@ -11,7 +15,7 @@ Distortion effects allow you to:
 
 ## Perspective Distortion
 
-Perspective distortion allows you to transform an image using 4 control points, creating a perspective effect:
+Perspective distortion allows you to transform an image using 4 control points, creating a perspective effect. The implementation uses a proper 3x3 homography matrix with bilinear interpolation for accurate and high-quality transformations:
 
 <CodeSwitcher>
 <ts>
@@ -139,8 +143,12 @@ const bottomUp = await painter.createImage({
 </js>
 </CodeSwitcher>
 
-<Alert type="warning" title="Perspective Points">
-Perspective distortion requires exactly 4 points in this order: top-left, top-right, bottom-right, bottom-left. Coordinates are relative to the image's position (x, y).
+<Alert type="info" title="Perspective Points">
+Perspective distortion requires exactly 4 points in this order: top-left, top-right, bottom-right, bottom-left. Coordinates are relative to the image's position (x, y). The implementation uses all 4 points with a proper homography matrix to ensure accurate transformations and correct bounding box calculation.
+</Alert>
+
+<Alert type="success" title="Improved in v5.2.9">
+Perspective distortion now correctly handles all 4 control points using a proper homography matrix instead of the previous affine transform. Bounding box calculation ensures transformed images stay within canvas bounds, and bilinear interpolation provides high-quality results.
 </Alert>
 
 ## Bulge Effect
